--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         
     .legend-box {
        background: white; 
-       width: 210px;
+       width: 220px;
        height: 410px;
        position: absolute; 
-       top: 508px;
+       top: 80%;
        left: 10%;
        padding: 5px;
        padding-left: 14px;
@@ -91,7 +91,7 @@
 }     
     .buttons {
     position: absolute;
-    top: 150%;
+    top: 175%;
     left: 10%;
 }     
           
@@ -145,7 +145,7 @@
             <img style="position:absolute; left:189px; top:60px; width:5%;" src="http://i.imgur.com/buxQHis.png"/>
             </div>
             <div>
-            <img style="position:absolute; left:35px; top:147px; width:70%;" src="http://i.imgur.com/j7wK8yB.png"/>
+            <img style="position:absolute; left:35px; top:147px; width:70%;" src="http://i.imgur.com/zXn0xtq.png"/>
             </div>
             <div>
             <img style="position:absolute; left:35px; top:205px; width:70%;" src="http://i.imgur.com/67UQr3S.png"/>
